hard-gists/3411495/run.log
=== Docker Run Log for 3411495 ===
Started at: Mi 29. Okt 13:51:05 CET 2025

[2025-10-29 13:51:05] START: Running container for 3411495
[2025-10-29 13:51:06] SUCCESS: Container a2fe3bd8aa2265c0a6463b02bc742e9f958cd49f09dd9942bc71f085d6f7de48 started for 3411495
=== Container logs for 3411495 ===
  File "/snippet.py", line 24
    print '"data" directory does not exist, so saving data in present working directory'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3411495 ===
[2025-10-29 13:51:08] INFO: Container a2fe3bd8aa2265c0a6463b02bc742e9f958cd49f09dd9942bc71f085d6f7de48 has stopped
